Final version working: no more edit on master